# university_homeworks

./: .gitignore  LICENSE  README.md
semester_1/Homework11/: file.txt
semester_1/finalTest/task1/: CMakeLists.txt  main.c
semester_1/finalTest/task1/getMinimalNumber/: getMinimalNumber.c  getMinimalNumber.h
semester_1/finalTest/task1/read/: read.c  read.h
semester_1/finalTest/task1/tests/: test.c
semester_1/finalTest2/task3/: CMakeLists.txt  main.c
semester_1/finalTest2/task3/checkString/: checkString.c  checkString.h
semester_1/finalTest2/task3/getString/: getString.c  getString.h
semester_1/finalTest2/task3/tests/: test.c  test.h
semester_1/homework1/: array.c  brackets.c  nullsInArray.c  partialQuotient.c  primeNumbers.c  substring.c  swap.c  (+1 more)
semester_1/homework4/mostFrequentElement2/: CMakeLists.txt  file.txt  main.c  smartQuickSort.c  smartQuickSort.h
semester_1/homework4/mostFrequentElement2/mostFrequentElement/: mostFrequentElement.c  mostFrequentElement.h
semester_1/homework4/mostFrequentElement2/mostFrequentElement/tests/: test.c  test.h
semester_1/homework4/mostFrequentElement2/readFile/: readFile.c  readFile.h
semester_1/homework4/mostFrequentElement2/smartQuickSort/: smartQuickSort.c  smartQuickSort.h
semester_1/homework4/mostFrequentElement2/smartQuickSort/tests/: test.c  test.h
semester_1/homework5/calculator/: CMakeLists.txt  calculator.c  calculator.h  main.c
semester_1/homework5/calculator/Stack/: Stack.c  Stack.h
semester_1/homework5/calculator/String/: String.c
semester_1/homework5/calculator/calculator/: calculator.c  calculator.h
semester_1/homework5/calculator/test/: test.c  test.h
semester_1/homework5/calculator/tests/: test.c  test.h
semester_1/homework5/sortingStation/: CMakeLists.txt  main.c
semester_1/homework5/sortingStation/Stack/: Stack.c  Stack.h
semester_1/homework5/sortingStation/getString/: getString.c  getString.h
semester_1/homework5/sortingStation/sortingStation/: sortingStation.c  sortingStation.h
semester_1/homework5/sortingStation/tests/: test.c  test.h
(+149 files in other folders)
